fix #16. added otel context wrapper in all calls